[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "paos"
version = "1.2.2"
authors = [
    {name = "Andrea Bocchieri <andrea.bocchieri@uniroma1.it>"},
    {name = "Lorenzo V. Mugnai"},
    {name = "Enzo Pascale"},
]
description = "PAOS, the Physical Optics Simulator, is a fast, modern, and reliable Python package for Physical Optics studies. It implements Physical Optics Propagation in Fresnel approximation and paraxial ray tracing to analyze complex waveform propagation through both generic and off-axes optical systems."
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">3.8"
dependencies = [
    "numpy>=1.22.2",
    "photutils>=1.3.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.1",
    "h5py>=3.6.0",
    "joblib>=1.1.0",
    "decorator>=5.1.1",
    "tqdm>=4.62.3",
    "ipykernel>=6.9.0",
    "sympy>=1.12",
    "scikit-image>=0.24.0",
    "loguru>=0.7.2",
    "shiny",
    "shinywidgets",
    "faicons",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/arielmission-space/PAOS"
Issues = "https://github.com/arielmission-space/PAOS/issues"
Repository = "https://github.com/arielmission-space/PAOS.git"
DOI = "https://doi.org/10.1117/12.3018333"

[project.optional-dependencies]
docs = [
    "sphinx>=5.0",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-jsmath",
    "sphinx_markdown_tables>=0.0.15",
    "jupyter-sphinx>=0.3.2",
    "sphinx_rtd_theme>=1.0.0",
]
test = [
    "codecov",
    "flake8",
    "pytest",
]

[project.scripts]
paos = "paos.paos:main"
paos_gui = "paos.gui.gui:main"

[tool.setuptools]
zip-safe = true
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}
