[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paos"
version = "1.2.7-rc1"
description = "PAOS, the Physical Optics Simulator, is a fast, modern, and reliable Python package for Physical Optics studies. It implements Physical Optics Propagation in Fresnel approximation and paraxial ray tracing to analyze complex waveform propagation through both generic and off-axes optical systems."
license = "BSD-3-Clause"
authors = [
    "Andrea Bocchieri <andrea.bocchieri@uniroma1.it>",
    "Lorenzo V. Mugnai",
    "Enzo Pascale",
]
readme = "README.md"
homepage = "https://github.com/arielmission-space/PAOS"
repository = "https://github.com/arielmission-space/PAOS.git"
documentation = "https://paos.readthedocs.io/en/latest/"
keywords = [
    "python",
    "open-source",
    "psf",
    "gui",
    "optics",
    "wavefront",
    "ray-tracing",
    "fresnel",
    "optics-simulation",
    "paos",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/arielmission-space/PAOS/issues"
"DOI" = "https://doi.org/10.1117/12.3018333"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
photutils = "^1.3.0"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
h5py = "^3.6.0"
joblib = "^1.1.0"
decorator = "^5.1.1"
tqdm = "^4.62.3"
ipykernel = "^6.9.0"
sympy = "^1.12"
scikit-image = "*"
loguru = "^0.7.2"
shiny = "^1.2.1"
shinywidgets = "*"
faicons = "*"
marimo = "^0.10.13"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinxcontrib-napoleon = "*"
sphinxcontrib-jsmath = "*"
sphinx-markdown-tables = "^0.0.17"
jupyter-sphinx = "^0.5.3"
sphinx-rtd-theme = "^3.0.1"

[tool.poetry.scripts]
paos = "paos.paos:main"
paos_gui = "paos.gui.gui:main"
