[metadata]
name = paos
version = 0.0.4
author = Andrea Bocchieri, Enzo Pascale, Lorenzo V. Mugnai
author_email = andrea.bocchieri@uniroma1.it
description = The Physical Ariel Optics Simulator
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
url = https://github.com/arielmission-space/PAOS
project_urls = 
	Bug Tracker = https://github.com/arielmission-space/PAOS/issues
	Source Code = https://github.com/arielmission-space/PAOS
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
packages = paos
include_package_data = True
python_requires = >3.8
install_requires = 
	numpy>=1.22.2
	photutils>=1.3.0
	scipy>=1.8.0
	matplotlib>=3.5.1
	h5py>=3.6.0
	joblib>=1.1.0
	decorator>=5.1.1
	pysimplegui>=4.56.0
	tqdm>=4.62.3

[options.extras_require]
docs = 
	sphinx~=4.4
	sphinxcontrib-napoleon
	sphinxcontrib-jsmath
	sphinx_markdown_tables 
	jupyter-sphinx 
	sphinx-material
	sphinx_rtd_theme
test = 
	codecov
	flake8
	pytest

[options.entry_points]
console_scripts = 
    paos=paos.paos:main
    paosgui=paos.paosGui:main
