[metadata]
name = paos
version = 1.0.0
author = Andrea Bocchieri, Lorenzo V. Mugnai, Enzo Pascale
author_email = andrea.bocchieri@uniroma1.it
description = PAOS, the Physical Optics Simulator, is a fast, modern, and reliable Python package for Physical Optics studies. It implements Physical Optics Propagation in Fresnel approximation and paraxial ray tracing to analyze complex waveform propagation through both generic and off-axes optical systems.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/arielmission-space/PAOS
project_urls = 
	Bug Tracker = https://github.com/arielmission-space/PAOS/issues
	Source Code = https://github.com/arielmission-space/PAOS
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >3.8
install_requires = 
	numpy>=1.22.2
	photutils>=1.3.0
	scipy>=1.8.0
	matplotlib>=3.5.1
	h5py>=3.6.0
	joblib>=1.1.0
	decorator>=5.1.1
	pysimplegui>=4.56.0
	tqdm>=4.62.3
	ipykernel>=6.9.0

[options.extras_require]
docs = 
	sphinx~=4.5
	sphinxcontrib-napoleon
	sphinxcontrib-jsmath
	sphinx_markdown_tables 
	jupyter-sphinx 
	nbsphinx
	sphinx_rtd_theme
test = 
	codecov
	flake8
	pytest

[options.entry_points]
console_scripts = 
    paos=paos.paos:main
    paosgui=paos.paosGui:main
